front/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .dg--link-hover {
    @apply transition-colors;
    @apply dg--transition-effect;
    color: rgb(var(--foreground-rgb));
    &:hover,
    &:focus {
      color: rgb(var(--highlight-rgb));
    }
  }
  .dg--btn-primary {
    @apply transition-colors;
    &:hover,
    &:focus {
    }
  }
  .dg--btn-secondary {
    @apply transition;
    @apply dg--transition-effect;
    background: rgb(var(--btn--secondary-rgb));
    border: 2px solid rgb(var(--btn--secondary-rgb));
    border-top-width: 1px;
    border-top-color: rgb(var(--btn--secondary-highlight-rgb));
    &:hover,
    &:focus {
      @apply brightness-125;
    }
  }
}

@layer utilities {
  .dg--transition-effect {
    transition-duration: var(--transform-duration);
    transition-timing-function: var(--transform-timing-function);
  }
}

:root,
body.light-theme {
  --foreground-rgb: 33, 33, 33;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
  --btn--secondary-rgb: 190, 193, 194;
  --btn-secondary-highlight-rgb: 92, 92, 92;
  --f04-bg-hex: #191b1b;
  --highlight-rgb: 175, 83, 7;
  --transform-duration: 500ms;
  --transform-timing-function: ease-in-out;
}

@media (prefers-color-scheme: dark) {
  :root,
  body.dark-theme {
    --foreground-rgb: 223, 224, 224;
    --background-start-rgb: 35, 36, 38;
    --background-end-rgb: 29, 30, 32;
    --highlight-rgb: 255, 255, 21;
    --btn--secondary-rgb: 54, 54, 56;
    --btn-secondary-highlight-rgb: 92, 92, 92;
    --transform-duration: 500ms;
    --transform-timing-function: ease-in-out;
  }
}

html {
  border-top: 8px solid rgb(var(--foreground-rgb));
  overflow: hidden;
}

body {
  @apply transition-colors;
  @apply dg--transition-effect;
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
  color: rgb(var(--foreground-rgb));
  height: 100vh;
  min-height: 100vh;
  overflow: overlay;
}

.header,
.footer {
  @apply p-6;
  @apply sm:p-8;
  @apply lg:p-14;
  @apply pb-0;
  position: relative;
}

.header {
  position: relative;
}

.footer {
  @apply pb-9;
  @apply flex-col;
  @apply text-center;
  @apply opacity-20;
  @apply mt-auto;
  @apply text-sm;
}

.skip-to-content {
  @apply dg--btn-secondary;
  @apply px-5;
  @apply py-3;
  @apply transition-all;
  @apply dg--transition-effect;
  position: absolute;
  transform: translateY(-100%);
  opacity: 0%;

  &:focus {
    transform: translateY(0%);
    opacity: 100%;
  }
}

.main {
  @apply p-8;
  @apply md:p-11;
  @apply lg:p-16;
  @apply pb-16;
  @apply flex-grow;
  @apply justify-center;
}

.footer {
  @apply pb-3;
  @apply flex-col;
  @apply text-center;
  @apply opacity-20;
  @apply mt-auto;
  @apply text-sm;
}

.nav-home {
  @apply tracking-tight;
  @apply dg--link-hover;
  @apply ml-[2px];
}

.theme-toggle {
  @apply dg--link-hover;
  @apply transition;
  @apply dg--transition-effect;
  @apply mt-0.5 ml-3;
}

.nav-bar {
  .btn {
    @apply dg--btn-secondary;
  }
}

.main {
  @apply p-8;
  @apply md:p-11;
  @apply lg:p-16;
  @apply pb-16;
  @apply flex-grow;
  @apply justify-center;
}

.bio,
.links {
  max-width: 565px;
}

.bio {
  img {
    border: 1px solid rgba(var(--foreground-rgb), 0.5);
  }
  h1.headline {
    @apply text-4xl;
    @apply brightness-125;
    @apply py-5;
  }
}

.bio,
.post,
.posts,
.links,
.footer {
  a {
    @apply dg--link-hover;
  }
}

.bio,
.post,
.posts,
.footer {
  a {
    @apply pb-0.5;
    color: rgb(var(--foreground-rgb));
    border-bottom: 1px solid rgb(var(--foreground-rgb));
    &:hover,
    &:focus {
      border-color: rgb(var(--highlight-rgb));
    }
  }
}

.bio,
.post,
.posts {
  line-height: 1.6;
  @apply antialiased;
  @apply opacity-95;
  h1 {
    @apply tracking-tight;
    @apply font-extrabold;
  }
  p {
    @apply pb-7;
  }
}

.links {
  @apply flex;
  @apply items-stretch;
  @apply px-8;
  .link-list {
    @apply flex;
    @apply flex-wrap;
    @apply justify-center;
  }
  .link {
    @apply flex;
    @apply leading-none;
    @apply m-2;
    @apply w-8;
    a {
      @apply opacity-30;
      @apply self-center;
      @apply transition-opacity;
      @apply dg--transition-effect;
      &:hover,
      &:focus {
        @apply opacity-100;
      }
    }
    .goodreads-icon,
    .stackoverflow-icon {
      @apply max-h-8;
    }
    .goodreads-icon {
      @apply pt-1;
    }
  }
}

.f04 {
  background-color: var(--f04-bg-hex);
}

